# twitter/server/api/swagger_cals.yaml
@@ -4,7 +4,7 @@ info:
   description: API для корпоративного сервиса микроблога
   version: 1.0.0
 servers:
-  - url: http://localhost:5000/api
+  - url: http://localhost:5000/
     description: Local server
 
 tags:
@@ -25,7 +25,7 @@ paths:
       summary: Заполнить базу данных пользователями
       responses:
         '200':
-          description: Database populated successfully
+          description: База данных успешно заполнена пользователями
           content:
             application/json:
               schema:
@@ -33,8 +33,10 @@ paths:
                 properties:
                   result:
                     type: boolean
-                  message:
-                    type: string
+                  users:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/User'
 
   /login:
     get:
@@ -348,6 +350,19 @@ paths:
                 properties:
                   result:
                     type: boolean
+        '400':
+          description: Ошибка запроса
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  result:
+                    type: boolean
+                  error_type:
+                    type: string
+                  error_message:
+                    type: string
         '401':
           description: Пользователь неавторизован
           content:
